// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render a FileUploadButton 1`] = `
<div
  tabindex="0"
>
  <button
    class="button secondary"
    type="button"
  >
    <span
      class="buttonText"
    >
      Upload something!
    </span>
  </button>
  <input
    autocomplete="off"
    multiple=""
    style="display:none"
    tabindex="-1"
    type="file"
  />
</div>
`;

exports[`Render a FileUploadButton with other skin and icon 1`] = `
<div
  tabindex="0"
>
  <button
    class="button link"
    type="button"
  >
    <span
      aria-label="su-image"
      class="su-image buttonIcon"
    />
    <span
      class="buttonText"
    >
      Upload something!
    </span>
  </button>
  <input
    autocomplete="off"
    multiple=""
    style="display:none"
    tabindex="-1"
    type="file"
  />
</div>
`;

exports[`Render a disabled FileUploadButton 1`] = `
<div
  tabindex="0"
>
  <button
    class="button secondary"
    disabled=""
    type="button"
  >
    <span
      class="buttonText"
    >
      Upload something!
    </span>
  </button>
  <input
    autocomplete="off"
    multiple=""
    style="display:none"
    tabindex="-1"
    type="file"
  />
</div>
`;
